Modify person related classes and records, continue testing